--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
+    "tom-select": "^2.2.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
