--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "sweetalert": "^2.1.2",
     "tom-select": "^2.2.2",
     "web-vitals": "^2.1.4",
