--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "react-toggle-dark-mode": "^1.1.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
