--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-moment": "^1.1.3",
     "react-paginate": "^8.2.0",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.3",
