--- a/package.json
+++ b/package.json
@@ -65,7 +65,11 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "postcss-html": "^1.3.0",
     "postcss-import": "^15.1.0",
+    "postcss-scss": "^4.0.3",
+    "sass": "^1.49.4",
+    "sass-loader": "^10.2.1",
     "tailwindcss": "^3.3.1"
   }
 }
