--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-paginate": "^8.2.0",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "react-toggle-dark-mode": "^1.1.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
     "tom-select": "^2.2.2",
