--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@calumk/editorjs-codeflask": "^1.0.9",
+    "@calumk/editorjs-nested-checklist": "^1.0.9",
     "@editorjs/editorjs": "^2.27.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/nested-list": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
     "@headlessui/react": "^1.7.15",
     "@makotot/paginated": "^1.0.1",
     "@mantine/hooks": "^6.0.13",
@@ -15,6 +21,10 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "create-react-app": "^5.0.1",
+    "editorjs-alert": "^1.1.3",
+    "editorjs-header-with-alignment": "^1.0.1",
+    "editorjs-header-with-anchor": "^2.6.0",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
     "feather-icons": "^4.29.0",
     "formik": "^2.2.9",
     "http": "^0.0.1-security",
@@ -68,6 +78,10 @@
     ]
   },
   "devDependencies": {
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/warning": "^1.3.0",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -76,6 +90,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
+    "editorjs-toggle-block": "^0.3.11",
     "postcss": "^8.4.21",
     "postcss-html": "^1.3.0",
     "postcss-import": "^15.1.0",
